    * FIX: Inventory for cluster nodes who are part of multiple clusters 

    Checks & Agents:
    * FIX: mssql_counters.file_sizes - Fixed wrong value for "Log Files" in output
    * FIX: drbd: Parameters for expected roles and disk states can now be set to 
    * Add: Added check for ricoh printer supply levels
      None to disable alerting on changed values

    Multisite:
    * Added comment painter to notification related views

    BI:
    * Use Ajax to delay rendering of invisible parts of the tree (this
      saves lots of HTML code)

    WATO:
    * Added hr_mem check to the memory checkgroup to make it configurable in WATO
    * FIX: Fixed some typos in ldap error messages
    * FIX: Fixed problem on user profile page when no alias set for a user
    * FIX: list valuespecs could not be extended after once saving
    * FIX: fix title of foldable areas contained in list valuespecs

1.2.1i5:
    Core:
    * Improved handling of CTRL+C (SIGINT) to terminate long runnining tasks 
      (e.g.  inventory of SNMP hosts)
    * FIX: PING services on clusters are treated like the host check of clusters
    * cmk --notify: new environment variable NOTIFY_WHAT which has HOST or SERVICE as value
    * cmk --notify: removing service related envvars in case of host notifications
    * cmk --notify: added test code to help developing nitofication plugins.
      Can be called with "cmk --notify fake-service debug" for example

    Checks & Agents:
    * Linux Agent, diskstat: Now supporting /dev/emcpower* devices (Thanks to Claas Rockmann-Buchterkirche)
    * FIX: winperf_processor: Showing 0% on "cmk -nv" now instead of 100%
    * FIX: win_dhcp_pools: removed faulty output on non-german windows 2003 servers 
           with no dhcp server installed (Thanks to Mathias Decker)
    * Add: fileinfo is now supported by the solaris agent. Thanks to Daniel Roettgermann
    * Logwatch: unknown eventlog level ('u') from windows agent treated as warning