@@ -12,11 +12,18 @@ description:
  It will then fetch the memory usage from the JMX status info of the remote
  Java Virtual Machine.
 
- The check can alert if the {WARN}/{CRIT} thresholds for a configurable total
- is exceeded.
+ The check can alert if the {WARN}/{CRIT} thresholds for a configurable heap, nonheap
+ or total is exceeded.
 
 item:
  The name of the application server instance as configured by the agent.
+
+examples:
+ jolokia_metrics_mem_default_levels = {
+    "heap"    : (2000,1000),    # heap warning when 2000MB left, heap crit when 1000 MB left
+    "nonheap" : (75.0, 95.7),   # nonheap warning at 75.0% usage, nonheap crit at 95.7% usage   
+    "totalheap" : (3000, 2200), # totalheap warning at 3000MB left, totalheap crit at 2200MB left
+ }
 
 perfdata:
  The heap and non-heap usage information and levels in Megabytes.
@@ -26,10 +33,23 @@ inventory:
 
 
 [parameters]
-warning (int): The total memory consumption that triggers
- a WARNING state
-critical (int): The total memory consumption that triggers
- a CRITICAL state
+parameters (dict): This check requires a dictionary with the following keys.
+                   If a key is missing no WARN/CRIT verfication is done for
+                   this specific key
+
+ {"heap"} - A pair of two values to be used as WARN/CRIT levels
+ Integer numbers are interpreted as remaining heap memory
+ Float numbers are interpreted as available heap memory usage
+
+ {"nonheap"} - A pair of two values to be used as WARN/CRIT levels
+ Integer numbers are interpreted as remaining nonheap memory
+ Float numbers are interpreted as available nonheap memory usage
+
+ {"totalheap"} - A pair of two values to be used as WARN/CRIT levels
+ Integer numbers are interpreted as remaining totalheap memory
+ Float numbers are interpreted as available totalheap memory usage
+
 
 [configuration]
-jolokia_metrics_mem_default_levels (int, int): Default levels warning and critical
+jolokia_metrics_mem_default_levels (dict): Default warn/crit levels for heap, nonheap and totalheap 
+
