@@ -25,7 +25,7 @@
 # Boston, MA 02110-1301 USA.
 
 # MB warn, crit
-jolokia_metrics_mem_default_levels      = (1000, 2000)
+#jolokia_metrics_mem_default_levels = (2000, 3000) # 
 
 # Number of threads warn, crit
 jolokia_metrics_threads_default_levels  = (80, 100) 
@@ -86,10 +86,12 @@ def jolokia_metrics_serv(info, (inst, app, serv)):
 def inventory_jolokia_metrics(info, what):
     parsed = jolokia_metrics_parse(info)
     levels = None
+
     if what == 'mem':
-        levels = 'jolokia_metrics_mem_default_levels'
+        levels = {} 
     elif what == 'threads':
         levels = 'jolokia_metrics_threads_default_levels'
+
     return [ (k, levels) for k in parsed ]
 
 
@@ -157,42 +159,63 @@ def inventory_jolokia_metrics_serv(info, what):
 
 
 def check_jolokia_metrics_mem(item, params, info):
-    warn, crit = params
     parsed = jolokia_metrics_parse(info)
     if item not in parsed:
         return (3, "UNKNOWN - data not found in agent output")
+
+ 
+    # convert old parameter version ( warn, crit )
+    # represented levels of total heap
+    if type(params) == tuple:
+        params = {"totalheap": params}    
+
     d = parsed[item]
     mb = 1024 * 1024.0
     heap = saveint(d["HeapMemoryUsage"]) / mb
     heapmax = saveint(d["HeapMemoryMax"]) / mb
-    non_heap = saveint(d["NonHeapMemoryUsage"]) / mb
-    non_heapmax = saveint(d["NonHeapMemoryMax"]) / mb
-    total = heap + non_heap
-    if type(warn) == int:
-        perfdata = [ ("heap",    heap,     warn, crit),
-                     ("nonheap", non_heap, warn, crit) ]
-        infotext = "%.0f MB total (%.0f MB heap, %.0f MB non-heap), levels at %.0f/%.0f" % (total, heap, non_heap, warn, crit)
-        if total >= crit:
-            return (2, "CRIT - " + infotext, perfdata)
-        elif total >= warn:
-            return (1, "WARN - " + infotext, perfdata)
-        else:
-            return (0, "OK - " + infotext, perfdata)
-    else:
-        perfdata = [ ("heap",    heap,     heapmax*warn/100.0, heapmax*crit/100.0),
-                     ("nonheap", non_heap, non_heapmax*warn/100.0, non_heapmax*crit/100.0) ]
-	infotext = "%.0f MB heap levels at %.0f/%.0f, %.0f MB non-heap, levels at %.0f/%.0f" % (heap, heapmax*warn/100., heapmax*crit/100., non_heap, non_heapmax*warn/100., non_heapmax*crit/100.) 
-        if heap >= heapmax*crit/100.0:
-            return (2, "CRIT - " + infotext, perfdata)
-        elif heap >= heapmax*warn/100.0:
-            return (1, "WARN - " + infotext, perfdata)
-        elif non_heap >= non_heapmax*crit/100.0:
-            return (2, "CRIT - " + infotext, perfdata)
-        elif non_heap >= non_heapmax*warn/100.0:
-            return (1, "WARN - " + infotext, perfdata)
-        else:
-            return (0, "OK - " + infotext, perfdata)
-       
+    nonheap = saveint(d["NonHeapMemoryUsage"]) / mb
+    nonheapmax = saveint(d["NonHeapMemoryMax"]) / mb
+    total = heap + nonheap 
+    totalmax = heapmax + nonheapmax
+
+    state_sign = { 0: "", 1: "(!)", 2: "(!!)" }
+    worst_state = 0
+    perfdata = []
+    info_list = []
+
+    for (what, value, value_max) in [
+            ("heap", heap, heapmax),
+            ("nonheap",  nonheap, nonheapmax),
+            ("totalheap",  total, totalmax),
+        ]:
+        param_state = 0
+        level_info = ""
+        if params.get(what):
+            if type(params[what][0]) == int:
+                if what != "totalheap":
+                    perfdata.append((what, value, value_max - params[what][0], value_max - params[what][1], "", value_max))
+                if value_max - value <= params[what][1]:
+                    param_state = 2
+                    level_info = "%s(crit at %sMB free)" % (state_sign[2], params[what][1])
+                elif value_max - value <= params[what][0]:
+                    param_state = 1
+                    level_info = "%s(warn at %sMB free)" % (state_sign[1], params[what][0])
+            else:
+                if what != "totalheap":
+                    perfdata.append((what, value, value_max * params[what][0] / 100.0, value_max * params[what][1] / 100.0, "", value_max))
+                if value >= value_max * params[what][1] / 100.0:
+                    param_state = 2
+                    level_info = "%s(crit at %s%%)" % (state_sign[2], params[what][1])
+                elif value >= value_max * params[what][0] / 100.0:
+                    param_state = 1
+                    level_info = "%s(warn at %s%%)" % (state_sign[1], params[what][0])
+
+ 
+        info_list.append("%s: %0.fMB/%.1f%% used%s" % (what.title(), value, value/value_max*100, level_info))
+        worst_state = max(param_state, worst_state) 
+
+    infotext = nagios_state_names[worst_state] + " - " + ', '.join(info_list)
+    return (worst_state, infotext, perfdata)
  
 def check_jolokia_metrics_threads(item, params, info):
     warn, crit = params
@@ -408,10 +431,12 @@ def check_jolokia_metrics_bea_threads(item, _no_params, info):
 
 # General JVM checks
 check_info["jolokia_metrics.mem"] = {
-    "service_description" : "JVM %s Memory",
-    "check_function"      : check_jolokia_metrics_mem,
-    "inventory_function"  : lambda i: inventory_jolokia_metrics(i, "mem"),
-    "has_perfdata"        : True,
+    "service_description"     : "JVM %s Memory",
+    "check_function"          : check_jolokia_metrics_mem,
+    "inventory_function"      : lambda i: inventory_jolokia_metrics(i, "mem"),
+    "has_perfdata"            : True,
+    "group"                   : "jvm_memory",
+    "default_levels_variable" : "jolokia_metrics_mem_default_levels"
 }
 
 check_info["jolokia_metrics.threads"] = {
